@@ -21,6 +21,7 @@
     <default-properties-file>${basedir}/src/main/recursos/default.properties</default-properties-file>
     <test-properties-file>${basedir}/src/test/resources/default-test.properties</test-properties-file>
     <config.files.dir>${basedir}/src/main/resources</config.files.dir>
+    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
   </properties>
 
   <dependencies>
@@ -119,163 +120,226 @@
         <filtering>true</filtering>
       </resource>
     </resources>
-    <pluginManagement>      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-          <executions>
-            <!--Usamos esto para quitar el test de la base de datos-->
-            <execution>
-              <id>test-db-clean</id>
-              <phase>test-compile</phase>
-              <goals>
-                <goal>clean</goal>
-              </goals>
-              <configuration>
-                <filesets>
-                  <fileset>
-                    <directory>${basedir}/src/test/resources</directory>
-                    <includes>
-                      <include>test-database.db</include>
-                    </includes>
-                  </fileset>
-                </filesets>
-                <excludeDefaultDirectories>true</excludeDefaultDirectories>
-              </configuration>
-            </execution>
-          </executions>
-          <configuration>
-            <filesets>
-              <fileset>
-                <directory>${basedir}</directory>
-                <includes>
-                  <include>*.log</include>
-                  <include>*.ods</include>
-                </includes>
-              </fileset>
-              <!--Se usa para quitar la base de datos para los tests-->
-              <fileset>
-                <directory>${basedir}/src/test/resources</directory>
-                <includes>
-                  <include>test-database.db</include>
-                </includes>
-              </fileset>
-            </filesets>
-          </configuration>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <!--Usamos esto para copiar el perstience.xml al outputDirectory de los tests y aplicar el valor en el .properties fichero-->
-        <!--Hacemos esto para que los tests puede usar un BD diferente que el APP normal -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.1.0</version>
-          <executions>
-            <execution>
-              <phase>process-test-resources</phase>
-              <id>default-testResources</id>
-              <goals>
-                <goal>testResources</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>${project.build.testOutputDirectory}/META-INF</outputDirectory>
-                <overwrite>true</overwrite>
-                <useBuildFilters>false</useBuildFilters>
-                <filters>
-                  <!--Este fichero contiene la URL para la BD que es solamente para los tests-->
-                  <filter>src/test/resources/default-test.properties</filter>
-                </filters>
-                <resources>
-                  <resource>
-                    <!--Se usa para copiar el persistence.xml y poner la URL de la BD por los test-->
-                    <filtering>true</filtering>
-                    <directory>${basedir}/src/main/resources/META-INF</directory>
-                    <includes>
-                      <include>persistence.xml</include>
-                    </includes>
-                  </resource>
-                </resources>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-maven-plugin</artifactId>
-          <version>${openjfx.Maven.Version}</version>
-          <configuration>
-            <mainClass>es.deusto.App</mainClass>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-          <configuration>
-            <argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui.PlatformFactory=ALL-UNNAMED
+
+    <plugins>
+      <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <!--Usamos esto para quitar el test de la base de datos-->
+          <execution>
+            <id>test-db-clean</id>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+            <configuration>
+              <filesets>
+                <fileset>
+                  <directory>${basedir}/src/test/resources</directory>
+                  <includes>
+                    <include>test-database.db</include>
+                  </includes>
+                </fileset>
+              </filesets>
+              <excludeDefaultDirectories>true</excludeDefaultDirectories>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${basedir}</directory>
+              <includes>
+                <include>*.log</include>
+                <include>*.ods</include>
+              </includes>
+            </fileset>
+            <!--Se usa para quitar la base de datos para los tests-->
+            <fileset>
+              <directory>${basedir}/src/test/resources</directory>
+              <includes>
+                <include>test-database.db</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+      <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+      <!--Usamos esto para copiar el perstience.xml al outputDirectory de los tests y aplicar el valor en el .properties fichero-->
+      <!--Hacemos esto para que los tests puede usar un BD diferente que el APP normal -->
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <phase>process-test-resources</phase>
+            <id>default-testResources</id>
+            <goals>
+              <goal>testResources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.testOutputDirectory}/META-INF</outputDirectory>
+              <overwrite>true</overwrite>
+              <useBuildFilters>false</useBuildFilters>
+              <filters>
+                <!--Este fichero contiene la URL para la BD que es solamente para los tests-->
+                <filter>src/test/resources/default-test.properties</filter>
+              </filters>
+              <resources>
+                <resource>
+                  <!--Se usa para copiar el persistence.xml y poner la URL de la BD por los test-->
+                  <filtering>true</filtering>
+                  <directory>${basedir}/src/main/resources/META-INF</directory>
+                  <includes>
+                    <include>persistence.xml</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.5</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>jacoco-check</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <rule>
+                  <element>PACKAGE</element>
+                  <limits>
+                    <limit>
+                      <counter>LINE</counter>
+                      <value>COVEREDRATIO</value>
+                    </limit>
+                    <limit>
+                      <counter>BRANCH</counter>
+                      <value>COVEREDRATIO</value>
+                    </limit>
+                  </limits>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>${openjfx.Maven.Version}</version>
+        <configuration>
+          <mainClass>es.deusto.App</mainClass>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
+        <configuration>
+          <argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui.PlatformFactory=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw
-            </argLine>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>1.2.1</version>
-          <configuration>
-            <mainClass>es.deusto.App</mainClass>
-            <systemProperties>
-              <systemProperty>
-                <key>log4j.configuration</key>
-                <value>file:${config.files.dir}/log4j.properties</value>
-              </systemProperty>
-            </systemProperties>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.datanucleus</groupId>
-          <artifactId>datanucleus-maven-plugin</artifactId>
-          <version>5.2.1</version>
-          <configuration>
-            <persistenceUnitName>CentralUnit</persistenceUnitName>
-            <api>JDO</api>
-            <log4jConfiguration>${config.files.dir}/log4j.properties</log4jConfiguration>
-            <verbose>true</verbose>
-          </configuration>
-          <executions>
-            <execution>
-              <phase>process-classes</phase>
-              <goals>
-                <goal>enhance</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+          </argLine>
+          <argLine>-Xmx2048m</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <release>11</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.2</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+      </plugin>
+      <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>3.0.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <mainClass>es.deusto.App</mainClass>
+          <systemProperties>
+            <systemProperty>
+              <key>log4j.configuration</key>
+              <value>file:${config.files.dir}/log4j.properties</value>
+            </systemProperty>
+          </systemProperties>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.datanucleus</groupId>
+        <artifactId>datanucleus-maven-plugin</artifactId>
+        <version>5.2.1</version>
+        <configuration>
+          <persistenceUnitName>CentralUnit</persistenceUnitName>
+          <api>JDO</api>
+          <log4jConfiguration>${config.files.dir}/log4j.properties</log4jConfiguration>
+          <verbose>true</verbose>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>enhance</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <!-- select non-aggregate reports -->
+              <report>report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
